@@ -111,7 +111,12 @@ class ApiParamInfo extends ApiBase {
 				$a['default'] = $p[ApiBase::PARAM_DFLT];
 			if(isset($p[ApiBase::PARAM_ISMULTI]))
 				if($p[ApiBase::PARAM_ISMULTI])
+				{
 					$a['multi'] = '';
+					$a['limit'] = $this->getMain()->canApiHighLimits() ?
+							ApiBase::LIMIT_SML2 :
+							ApiBase::LIMIT_SML1;
+				}
 			if(isset($p[ApiBase::PARAM_TYPE]))
 			{
 				$a['type'] = $p[ApiBase::PARAM_TYPE];
