@@ -71,6 +71,9 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
   are now listed on action=help
 * (bug 15044) Added requestid parameter to api.php to facilitate distinguishing
   between requests
+* (bug 15048) Added limit field for multivalue parameters to action=paraminfo
+  output.
+* When the limit on multivalue parameters is exceeded, a warning is issued 
 
 === Languages updated in 1.14 ===
 
